hopefully fixed overflow of text in swiper

--- a/MyWeb/DarkMode.css
+++ b/MyWeb/DarkMode.css
@@ -423,7 +423,7 @@ nav ul li a{
 
     .slideContent .slideText{
 
-        margin-top: -4rem;
+        margin-top: -15rem;
 
     }
 
